--- a/aboutus.html
+++ b/aboutus.html
@@ -11,11 +11,11 @@
     <h1>About Us</h1>
     <nav>
       <ul class="links">
-        <li><a href="../Group-Project1/index.html">Home</a></li>
-        <li><a href="../Group-Project1/contacts.html">Contact</a></li>
-        <li><a href="../Group-Project1/menu.html">Menu</a></li>
-        <li><a href="../Group-Project1/events.html">Events</a></li>
-        <li><a href="../Group-Project1/reservations.html">Reservations</a></li>
+        <li><a href="../housebattle/index.html">Home</a></li>
+        <li><a href="../housebattle/contacts.html">Contact</a></li>
+        <li><a href="../housebattle/menu.html">Menu</a></li>
+        <li><a href="../housebattle/events.html">Events</a></li>
+        <li><a href="../housebattle/reservations.html">Reservations</a></li>
       </ul>
     </nav>
   </header>
