--- a/events.html
+++ b/events.html
@@ -14,11 +14,11 @@
   </div>
     <nav>
       <ul id="links">
-        <li><a href="../Group-Project1/index.html">Home</a></li>
-        <li><a href="../Group-Project1/contacts.html">Contact</a></li>
-        <li><a href="../Group-Project1/menu.html">Menu</a></li>
-       <li><a href="../Group-Project1/aboutus.html">AboutUs</a></li>
-        <li><a href="../Group-Project1/reservations.html">Reservations</a></li>
+        <li><a href="../housebattle/index.html">Home</a></li>
+        <li><a href="../housebattle/contacts.html">Contact</a></li>
+        <li><a href="../housebattle/menu.html">Menu</a></li>
+       <li><a href="../housebattle/aboutus.html">AboutUs</a></li>
+        <li><a href="../housebattle/reservations.html">Reservations</a></li>
       </ul> 
     </nav>
   </header>
