--- a/reservations.html
+++ b/reservations.html
@@ -32,11 +32,11 @@
     </form>
     <p id="confirmation"></p>
     <ul id="links">
-      <li><a href="../housebattle/index.html">Home</a></li>
-      <li><a href="../housebattle/contacts.html">Contact</a></li>
-      <li><a href="../housebattle/menu.html">Menu</a></li>
-      <li><a href="../housebattle/events.html">Events</a></li>
-      <li><a href="../housebattle/aboutus.html">AboutUs</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="contacts.html">Contact</a></li>
+      <li><a href="menu.html">Menu</a></li>
+      <li><a href="events.html">Events</a></li>
+      <li><a href="aboutus.html">AboutUs</a></li>
     </ul>
   </div>
 
